--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/websockets": "^10.3.3",
     "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
     "passport-local": "^1.0.0",
