add basic tests

--- a/package.json
+++ b/package.json
@@ -64,12 +64,13 @@
     "typescript": "^5.1.3"
   },
   "jest": {
+    "modulePaths": ["<rootDir>/"],
     "moduleFileExtensions": [
       "js",
       "json",
       "ts"
     ],
-    "rootDir": "src",
+    "rootDir": "",
     "testRegex": ".*\\.spec\\.ts$",
     "transform": {
       "^.+\\.(t|j)s$": "ts-jest"
