--- a/package.json
+++ b/package.json
@@ -27,7 +27,6 @@
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/platform-socket.io": "^10.3.3",
     "@nestjs/websockets": "^10.3.3",
-    "@prisma/client": "^5.10.2",
     "bcrypt": "^5.1.1",
     "cookie": "^0.6.0",
     "cookie-parser": "^1.4.6",
@@ -41,6 +40,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@prisma/client": "^5.12.1",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/express": "^4.17.17",
@@ -55,6 +55,7 @@
     "eslint-plugin-prettier": "^5.0.0",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
+    "prisma": "^5.12.1",
     "source-map-support": "^0.5.21",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.0",
@@ -64,7 +65,9 @@
     "typescript": "^5.1.3"
   },
   "jest": {
-    "modulePaths": ["<rootDir>/"],
+    "modulePaths": [
+      "<rootDir>/"
+    ],
     "moduleFileExtensions": [
       "js",
       "json",
